fix header miss align

--- a/apps/admin/src/app/components/app-layout/app-layout.module.scss
+++ b/apps/admin/src/app/components/app-layout/app-layout.module.scss
@@ -9,11 +9,16 @@
     'nav content content';
   height: 100vh;
 
+  .header {
+    grid-area: header;
+  }
+
   .content {
     grid-area: content;
     background-color: $background-gray-color;
     padding: $size-lg-3 $size-lg-4;
   }
+
   .navbar {
     background-color: $white-color;
     padding: 30px;
